--- a/lab2.html
+++ b/lab2.html
@@ -3,21 +3,7 @@
 	<title>Programmeringsspråk</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="lab2.css">
-	
-	
-<script>
-	function visTxt()
-	{
-	var språktype="";
-
-	språktype = document.getElementById("select_id").value; 
-
-	if(språktype==""){
-        document.getElementById("melding").innerHTML="Velg et språk ";}
-
-	else{document.getElementById("melding").innerHTML="Du har valgt programeringsspråk " +språktype;
-	}}
-</script>
+	<script src="lab2.js" type="text/javascript"></script>
 
 </head>
 
@@ -55,10 +41,13 @@
 
 <!-- Navigering for siden -->
 <ul class="navbar">					
-	<li><a href="#1">Hjem</a>			<!-- Gir dem forskjellige id'er så ikke alle linkene blir lilla når en blir klikket -->
-	<li><a href="#2">Kronologisk</a>
-	<li><a href="#3">Hierarkisk</a>
-	<li><a href="#4">Alfabetisk</a>
+	<li><a href="#1">Hjem</a>			<!-- Klarte ikke å bruke javascript til å refreshe til homepagen, eneste jeg kunne tenke meg var å
+											 redirecte gjennom html side. Men da ville det ikke fungert når den skifter adresse.-->
+	
+
+	<li><a href="#2"onclick="myFunction()">Kronologisk</a>
+	<li><a href="#3"onclick="myFunction()">Hierarkisk</a>
+	<li><a href="#4"onclick="myFunction()">Alfabetisk</a>  v	<!-- Gir dem forskjellige id'er så ikke alle linkene blir lilla når en blir klikket -->
 </ul>
 
 <!-- Innhold -->
